# ticket-resolve

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  startup.sh
app/: config.py  dependencies.py  main.py
app/alarms/: checker.py  ingester.py  models.py  store.py
app/classifier/: classifier.py  models.py  prompts.py
app/core/: exceptions.py  logging.py  middleware.py
app/correlation/: engine.py  models.py
app/ingestion/: api_ingester.py  base.py  file_ingester.py  normalizer.py  webhook_ingester.py
app/maintenance/: checker.py  ingester.py  models.py  store.py
app/matching/: embedder.py  engine.py  pipeline.py  st_embedder.py  ticket_store.py
app/models/: human_triage.py  recommendation.py  review.py  sop.py  telco_ticket.py  ticket.py
app/recommendation/: agent.py  chains.py  output_parser.py  prompts.py  tools.py
app/review/: feedback.py  handler.py  triage.py
app/sop/: knowledge_base.py  loader.py  parser.py  retriever.py  sop_store.py
app/storage/: audit_store.py  chat_feedback_store.py  chroma_client.py  network_store.py  repositories.py  telco_repositories.py
app/tasks/: background.py
context-templates/: README.md  code_scan.py  data_quality_check.py  lessons_check.py  sdlc_workflow.py  validate_prompt.py
context-templates/deliverables/: accessibility.md  deployment.md  hld.md  lessons-learned.md  lld.md  rai-compliance.md  requirements.md  sit-report.md  tdd.md  ut-report.md
context-templates/enhancements/: database.md  frontend.md  integration.md
context-templates/roles/: solution-architect.md  tech-lead.md  testing-lead.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  vite.config.ts
scripts/: build_network_graph.py  generate_sample_data.py  import_to_db.py  process_tickets_bulk.py  seed_chroma.py
tests/: conftest.py
(+121 files in other folders)
