[project]
name = "ticket-resolve"
version = "1.0.0"
description = "Agentic ticket resolution platform"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Config + validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",

    # LangChain ecosystem
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.1.4",

    # Vector DB
    "chromadb>=0.5.0",

    # LLM providers
    "openai>=1.50.0",
    "tiktoken>=0.7.0",

    # Local embeddings
    "sentence-transformers>=3.0.0",

    # Anthropic Claude API (fault classifier)
    "anthropic>=0.40.0",

    # Database (async)
    "sqlmodel>=0.0.21",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",

    # Structured logging
    "structlog>=24.4.0",

    # HTTP client
    "httpx>=0.27.0",

    # File parsing
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "pypdf>=4.3.0",

    # Utilities
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.5.0",
    "respx>=0.21.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
